crates/module-graph/tests/snapshots/ts_test__ts__export_default_interface.snap
---
source: crates/module-graph/tests/ts_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"ts/export-def-interface.ts\")"
---
{
    1: Module {
        exports: [
            Export {
                kind: Modern,
                module_id: None,
                source: None,
                span: Some(
                    Span {
                        start: 0,
                        end: 31,
                    },
                ),
                symbols: [
                    ExportedSymbol {
                        kind: DefaultType,
                        symbol_id: None,
                        name: "Foo",
                    },
                ],
                type_only: true,
            },
        ],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/ts/export-def-interface.ts",
        query: None,
        source: JavaScriptModule {
            package_type: Unknown,
            source: "export default interface Foo {}\n",
            source_type: SourceType {
                language: TypeScript {
                    is_definition_file: false,
                },
                module_kind: Module,
                variant: Standard,
                always_strict: false,
            },
            stats: JavaScriptStats {
                dynamic_import_count: 0,
                export_statements: 1,
                exports_default: true,
                import_statements: 0,
                other_statements: 0,
                require_count: 0,
            },
        },
    },
}
